--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\HenryRG\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3-155099902.properties
+deploy.ant.properties.file=C:\\Users\\HenryRG\\AppData\\Roaming\\NetBeans\\8.0.2\\tomcat80.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/glassfish-4.1/glassfish/domains/domain1
-j2ee.server.home=C:/glassfish-4.1/glassfish
-j2ee.server.instance=[C:\\glassfish-4.1\\glassfish;C:\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.domain=C:/Users/HenryRG/AppData/Roaming/NetBeans/8.0.2/apache-tomcat-8.0.15.0_base
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.15
+j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.15
 j2ee.server.middleware=C:/glassfish-4.1
 javac.debug=true
 javadoc.preview=true
