--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation
 j2ee.server.middleware=C:/glassfish-4.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=Chrome
+selected.browser=SL[/Browsers/IExplorerBrowser
 user.properties.file=C:\\Users\\HenryRG\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
